--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,12 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    display: flex;
+    align-items: center; 
+    justify-content: center;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
 }
 
 a {
